# devo

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/agent-provider/src/: openai_compat.rs
crates/claude-cli/src/: main.rs
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: config.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  config.rs  main.rs  onboarding.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs  stdio.rs
crates/compact/: Cargo.toml
crates/compact/src/: budget.rs  strategy.rs
crates/core/: Cargo.toml  default_base_instructions.txt  models.json
crates/core/src/: config.rs  context.rs  error.rs  lib.rs  logging.rs  message.rs  model.rs  model_catalog.rs  model_preset.rs  query.rs  session.rs  skills.rs
crates/core/src/config/: app.rs  mod.rs  provider.rs  skills.rs  tests.rs
crates/core/src/conversation/: records.rs
crates/core/tests/: L1_basic_loop.rs  L2_error_recovery.rs  L3_budget_compact.rs  L4_lifecycle.rs  e2e_ollama.rs
crates/core/tests/harness/: builders.rs  mod.rs
crates/mcp/: Cargo.toml
crates/permissions/: Cargo.toml
crates/permissions/src/: rules.rs  types.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: approval.rs  connection.rs  conversation.rs  event.rs  lib.rs  model.rs  protocol.rs  response.rs  role.rs  session.rs  skill.rs  thinking.rs  turn.rs  user_input.rs
crates/provider/: Cargo.toml  README.md
crates/provider/src/: anthropic.rs  lib.rs  openai.rs  openai_compat.rs  provider.rs  request.rs  response.rs  text_normalization.rs
crates/provider/src/anthropic/: messages.rs  mod.rs  role.rs
crates/provider/src/openai/: capabilities.rs  chat_completions.rs  mod.rs  reasoning_effort.rs  responses.rs  role.rs  shared.rs
crates/provider/src/openai/chat_completions/: stream.rs
crates/safety/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: approval.rs  bootstrap.rs  client.rs  connection.rs  event.rs  execution.rs  persistence.rs  protocol.rs  provider_config.rs  runtime.rs  session.rs  titles.rs  turn.rs
crates/server/src/runtime/: skills.rs
crates/server/tests/: README.md  end_to_end.rs  persistence_resume.rs  protocol_contract.rs  skills_integration.rs
crates/tasks/: Cargo.toml
crates/tasks/src/: manager.rs
crates/tools/: Cargo.toml
crates/tools/src/: apply_patch.rs  apply_patch.txt  bash.rs  context.rs  file_edit.rs  file_read.rs  file_write.rs  grep.rs  lib.rs  orchestrator.rs  read.rs  registry.rs  tool.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  chatwidget.rs  events.rs  history_cell.rs  input.rs  lib.rs  onboarding.rs  onboarding_config.rs  render.rs  runtime.rs  selection.rs  slash.rs  terminal.rs  tests.rs  transcript.rs  worker.rs  worker_events.rs
crates/tui/src/bottom_pane/: footer.rs
crates/tui/src/render/: mod.rs  theme.rs  transcript.rs
crates/utils/: Cargo.toml
crates/utils/src/: config_paths.rs  home_dir.rs  lib.rs
docs/: design-overview.md  spec-app-config.md  spec-context-management.md  spec-conversation.md  spec-language-model.md  spec-mcp.md  spec-overview-architecture.md  spec-safety.md  spec-server-api.md  spec-skills.md  spec-tools.md
docs/i18n/: README.zh-CN.md
