[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tools",
    "crates/provider",
    "crates/permissions",
    "crates/tasks",
    "crates/compact",
    "crates/mcp",
    "crates/claw-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
clawcr-core = { path = "crates/core" }
clawcr-tools = { path = "crates/tools" }
clawcr-provider = { path = "crates/provider" }
clawcr-permissions = { path = "crates/permissions" }
clawcr-tasks = { path = "crates/tasks" }
clawcr-compact = { path = "crates/compact" }
clawcr-mcp = { path = "crates/mcp" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# AI provider SDKs
async-anthropic = "0.6"
async-openai = { version = "0.34", features = ["chat-completion", "rustls"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
glob = "0.3"
regex = "1"
