[package]
name = "clawcr-cli"
description = "CLI entry point that assembles all crates"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "clawcr"
path = "src/main.rs"

[dependencies]
clawcr-core = { workspace = true }
clawcr-tools = { workspace = true }
clawcr-provider = { workspace = true }
clawcr-protocol = { workspace = true }
clawcr-safety = { workspace = true }
clawcr-tasks = { workspace = true }
clawcr-utils = { workspace = true }
clawcr-server = { workspace = true }
clawcr-tui = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
