[package]
name = "clawcr-protocol"
description = "Shared client/server protocol types for ClawCR"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
clawcr-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
smol_str = { workspace = true }
