[package]
name = "clawcr-server"
description = "Transport-neutral runtime protocol types and server contracts"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "clawcr-server"
path = "src/main.rs"

[dependencies]
clawcr-core = { workspace = true }
clawcr-protocol = { workspace = true }
clawcr-client = { workspace = true }
clawcr-provider = { workspace = true }
clawcr-safety = { workspace = true }
clawcr-tools = { workspace = true }
clawcr-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
smol_str = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
tokio-tungstenite = "0.28"

[dev-dependencies]
async-trait = { workspace = true }
pretty_assertions = "1"
tempfile = "3"
